# shortener_django

./: .gitignore  pyproject.toml  requirements.txt
app/: admin.py  apps.py  excel.py  mixins.py  models.py  qr_generator.py  utils.py
app/api/: routers.py  serializers.py  urls.py  views.py
app/management/commands/: delete_all.py  generate_qr.py  generate_url.py  parse_excel.py
app/migrations/: 0001_initial.py  0002_file.py  0003_file_is_parsed_alter_file_excel.py  0004_excelrow_is_url_generated.py  0005_url_is_qr_generated.py  0006_file_template.py  0007_file_status.py  0008_excelrow_status_url_status_alter_file_status.py
cfg/: settings.py  urls.py
documents/excel/: links.xlsx
media/doc/: Book1.xlsx
shortener/: admin.py  excel.py  mixins.py  models.py  qr_generator.py
shortener/api/: routers.py  serializers.py  urls.py  views.py
shortener/management/commands/: delete_all.py  generate_qr.py  generate_url.py  parse_excel.py
shortener/migrations/: 0001_initial.py  0002_file.py  0003_file_is_parsed_alter_file_excel.py  0004_excelrow_is_url_generated.py  0005_url_is_qr_generated.py  0006_file_template.py
